# real-estate-tool

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_acquisition_extensions.py  0003_geo_intelligence.py  0004_regions.py  0005_capex_financing.py  0006_micro_location_factors.py  0007_renovation_cases.py  0008_climate_resilience_score.py
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/services/: __init__.py  acquisition.py  data_sources.py  email_ingest.py  email_poller.py  financing.py  geocoding.py  germany.py  ingestion.py  location.py  memo.py  memo_pdf.py  micro_location.py  negotiation.py  osm_micro_location.py  region_data.py  region_import.py  region_score.py  rent_law.py  (+8 more)
backend/scripts/: de.davidwegener.immo-backend.plist  de.davidwegener.immo-poller.plist
backend/tests/: conftest.py  helpers.py  test_acquisition_engine.py  test_api.py  test_api_extensions.py  test_api_key.py  test_database_compatibility.py  test_email_ingest.py  test_email_poller.py  test_financing.py  test_geo_and_sources_api.py  test_geocoding.py  test_germany.py  test_investment_memo.py  test_micro_location.py  test_negotiation.py  test_osm_micro_location.py  test_region_score.py  test_regions_api.py  test_renovation_plan.py  test_rent_law.py  test_residual_debt_factor.py  test_risk_engine.py  test_scoring.py  test_signals.py  test_underwriting.py  test_weg_health.py
(+59 files in other folders)
